@@ -164,6 +164,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #16702: test_urllib2_localnet tests now correctly ignores proxies for
+  localhost tests.
+
 - Issue #16713: Fix the parsing of tel url with params using urlparse module.
 
 - Issue #16443: Add docstrings to regular expression match objects.
